@@ -1,3 +1,9 @@
+2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-client-window.c
+	  (mb_wm_client_window_sync_properties):
+	  Blogged about the monster hack.
+
 2009-07-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.52
